created cart component

--- a/src/index.scss
+++ b/src/index.scss
@@ -62,6 +62,15 @@ select {
   font: inherit;
 }
 
+button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+}
+
 @media (prefers-reduced-motion: reduce) {
   * {
     animation-duration: 0.01ms !important;
@@ -71,7 +80,7 @@ select {
   }
 }
 
-.App {
+.app {
   max-width: 1200px;
   margin: 0 auto;
   border-radius: 20px;
@@ -81,4 +90,10 @@ select {
   max-width: 1000px;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+.items {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 40px;
 }
