--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -32,10 +32,12 @@
         font-size: 14px;
     }
     &__favorit {
+        width: 32px;
+        height: 32px;
+        text-align: center;
         position: absolute;
         top: 20px;
         left: 20px;
-        padding: 9px;
         border: 1px solid #ECECEC;
         border-radius: 7px;
         transition: background-color 0.3s linear;
@@ -58,10 +60,13 @@
         }
     }
     &__add {
+        width: 32px;
+        height: 32px;
+        text-align: center;
+        vertical-align: center;
         position: absolute;
         bottom: 20px;
         right: 20px;
-        padding: 10px;
         border: 1px solid #ECECEC;
         border-radius: 7px;
         transition: background-color 0.3s linear;
