--- a/src/components/SideCart/SideCart.scss
+++ b/src/components/SideCart/SideCart.scss
@@ -1,10 +1,21 @@
+.overlay {
+    &--active {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 1;
+    }
+}
 .side-cart {
     position: fixed;
     right: -100%;
     top: 0;
     max-width: 400px;
     width: 100%;
-    min-height: 100vh;
+    height: 100%;
     padding: 30px;
     z-index: 2;
     background-color: #ffff;
@@ -14,6 +25,9 @@
     justify-content: space-between;
     &--active {
         right: 0;
+    }
+    &--scroll {
+        overflow: scroll;
     }
     &__header {
         display: flex;
