--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -6,6 +6,9 @@
     box-shadow: 0px 14px 30px rgba(0, 0, 0, 0.05);
     border-radius: 40px;
     transition: all 0.3s ease-in-out;
+    @media(max-width: 485px) {
+        margin: 0 auto;
+      }
     &:hover {
         transform: translateX(10px) translateY(-10px);
     }
