--- a/src/components/SideCart/SideCart.scss
+++ b/src/components/SideCart/SideCart.scss
@@ -24,10 +24,13 @@
     flex-direction: column;
     justify-content: space-between;
     &__empty {
-        margin-top: 100px;
+        flex: 1;
+        margin-top: 150px;
         text-align: center;
     }
     &__img {
+        width: 120px;
+        height: 120px;
         margin: 0 auto;
         margin-bottom: 20px;
     }
@@ -137,6 +140,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        margin-top: 24px;
         margin-bottom: 24px;
         & p {
             font-weight: 600;
