created orders page

--- a/src/index.scss
+++ b/src/index.scss
@@ -104,6 +104,10 @@ button {
   font-size: 32px;
 }
 
+.orders {
+  padding-bottom: 40px;
+}
+
 .items {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
