--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,6 +2,9 @@
     margin-top: 85px;
     padding: 40px 0;
     border-bottom: 1px solid #EAEAEA;
+    @media(max-width: 685px) {
+        margin-top: 0;
+    }
     &__inner {
         display: flex;
         justify-content: space-between;
@@ -15,14 +18,23 @@
             height: 40px;
             margin-right: 15px;
         }
-        &__text {
-           span {
-            color: #9D9D9D;
-           }
-        }
-        &__title {
-            font-weight: 700;
-            font-size: 20px;
+    }
+    &__title {
+        font-size: 20px;
+        font-weight: 700;
+        @media(max-width: 500px) {
+            font-size: 14px;
         }
     }
+    &__text {
+        @media(max-width: 420px) {
+            display: none;
+        }
+        span {
+         color: #9D9D9D;
+         @media(max-width: 500px) {
+           display: none;
+        }
+        }
+     }
 }
