--- a/src/components/SideCart/SideCart.scss
+++ b/src/components/SideCart/SideCart.scss
@@ -23,6 +23,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    @media(max-width: 500px) {
+        max-width: 100%;
+    }
     &__empty {
         flex: 1;
         margin-top: 150px;
@@ -79,6 +82,12 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        @media(max-width: 500px) {
+            max-width: 100%;
+        }
+        @media(max-width: 430px) {
+            overflow: auto;
+        }
     }
     &--scroll {
         overflow: scroll;
@@ -90,8 +99,11 @@
     }
     &__title {
         font-weight: 700;
-        font-size: 24px;;
+        font-size: 24px;
         margin-bottom: 30px;
+        @media(max-width: 500px) {
+            font-size: 20px;
+        }
     }
     &__item {
         display: flex;
@@ -101,9 +113,19 @@
         max-width: 325px;
         border: 1px solid #F3F3F3;
         border-radius: 20px;
+        @media(max-width: 500px) {
+            max-width: 100%;
+        }
+        @media(max-width: 430px) {
+            flex-direction: column;
+            text-align: center;
+        }
         & img {
             width: 70px;
             height: 70px;
+            @media(max-width: 430px) {
+                margin-bottom: 10px;
+            }
         }
     }
     &__item:not(:last-child) {
@@ -120,6 +142,9 @@
     &__price {
         font-weight: 700;
         font-size: 14px;
+        @media(max-width: 430px) {
+            margin-bottom: 10px;
+        }
     }
     &__remove {
         width: 32px;
@@ -127,6 +152,7 @@
         border: 1px solid #DBDBDB;
         border-radius: 8px;
         transition: background-color 0.3s linear;
+        
         &:hover {
             background-color: #ff8181;
         }
@@ -163,6 +189,9 @@
         font-weight: 600;
         font-size: 16px;
         transition: background-color 0.3s linear;
+        @media(max-width: 500px) {
+            max-width: 100%;
+        }
         &:hover {
             background-color: rgba(#9DD558, 0.8);
         }
