--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -23,6 +23,9 @@
         border-radius: 10px;
         padding: 10px 15px;
         padding-left: 46px;
+        &:focus {
+            outline: none;
+        }
     }
     &__block {
         position: relative;
